# small-installer

./: Cargo.toml  build.rs
src/: main.rs  progress.rs  signature.gpg  verify.rs
